# ReSys.Shop

./: .gitignore  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  GEMINI.md  ReSys.Shop.sln
src/ReSys.Shop.ImageSearch/: .gitignore  Dockerfile  EXPERIMENT_REPORT.md  QUICKSTART.md  README.md  THESIS_COMPARISON_SUMMARY.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run_api.bat
src/ReSys.Shop.ImageSearch/app/: config.py  database.py  dataset_loader.py  main.py  model_factory.py  model_mapping.py  schemas.py
src/ReSys.Shop.ImageSearch/app/services/: search_service.py
src/ReSys.Shop.ImageSearch/docs/thesis/results/run_20251222_155046/: FINAL_EXPERIMENT_REPORT.md  INTEGRATION_THESIS.md  STRATEGIC_ANALYSIS.md
src/ReSys.Shop.ImageSearch/docs/thesis/results/run_20251223_173415/size_100/: SUMMARY.md  (+2 more)
src/ReSys.Shop.ImageSearch/evaluation/: metrics.py  run_full_experiment.py  thesis_validation_suite.py  visualize_metrics.py
src/ReSys.Shop.ImageSearch/results/api_tests/: api_test_results.csv
src/ReSys.Shop.ImageSearch/results/thesis_validation/: THESIS_REPORT.md  performance_benchmarks.csv  recommendation_metrics.csv  search_category_breakdown.csv  search_metrics.csv  statistical_comparison.csv
src/ReSys.Shop.ImageSearch/scripts/: check_taxa_indexes.py  debug_clip_db.py  download_clip.py  download_dataset.py  inspect_db_schema.py  test_api.py  validate_setup.py  verify_models.py
src/ReSys.Shop.ImageSearch/scripts/experiments/: run_full_experiment.py
src/ReSys.Shop.ImageSearch/scripts/utils/: debug_clip_db.py  try_hf_download.py  validate_setup.py  verify_models.py
src/ReSys.Shop.ImageSearch/tests/: test_main.py  test_thesis_api.py
src/ReSys.Shop.ImageSearch/tests/integration/: test_main.py
(+1040 files in other folders)
